--- a/packages/golem/index.qmd
+++ b/packages/golem/index.qmd
@@ -13,7 +13,7 @@ image: "/img/golem.png"
 
 ::: {.g-col-6}
 
-`{golem}` is an opiniated framework for building production-grade `{shiny}` applications.
+`{golem}` is an opinionated framework for building production-grade `{shiny}` applications.
 
 It provides a set of tools to help you build a `{shiny}` application in a structured way automates routine tasks, facilitate deployment, and is extendable to feat your needs.
 
