--- a/news/golem-0.3.2-release-on-cran/index.qmd
+++ b/news/golem-0.3.2-release-on-cran/index.qmd
@@ -3,7 +3,8 @@ title: "{golem} 0.3.2 is now available"
 author: colin
 date: '2022-03-11'
 slug: golem-0.3.2-release-on-cran
-aliases: /post/golem-0.3.2-release-on-cran/
+aliases:
+  - /post/golem-0.3.2-release-on-cran/
 ---
 
 ```{r include = FALSE}
